--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,6 +102,12 @@ img {
 
 .header-nav-item {
 }
+
+.header-contact-icon {
+  fill: transparent;
+  stroke: #111;
+}
+
 /* =============header==========
 =================hero=========== */
 .hero {
@@ -112,6 +118,12 @@ img {
   padding: 380px 40px 40px 40px;
   background: rgba(17, 17, 17, 0.6);
   border-radius: 30px;
+  background-image: linear-gradient(
+      180deg,
+      rgba(17, 17, 17, 0.4) 0%,
+      rgba(17, 17, 17, 0.4) 100%
+    ),
+    url("path_to_image"), url(../img/chocolate_hero.jpg);
 }
 
 .hero-title {
@@ -141,6 +153,9 @@ img {
   font-size: 14px;
   color: #fff;
   margin-right: 14px;
+  transition-property: background, color;
+  transition-duration: 1000ms;
+  transition-timing-function: ease-in-out;
 }
 
 .hero-btn-buy:hover {
@@ -163,6 +178,9 @@ img {
 .hero-link-how:hover {
   border: 1px solid #fd9222;
   color: #fd9222;
+  transition-property: background, color;
+  transition-duration: 1000ms;
+  transition-timing-function: ease-in-out;
 }
 
 .hero-text {
@@ -323,6 +341,8 @@ img {
 /* =============how===========
 ==========our products======== */
 .our-products {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .products-title {
@@ -375,6 +395,8 @@ img {
 /* ===========our products=========
 ==============top sellers========== */
 .top-sellers {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .sellers-title {
@@ -384,13 +406,54 @@ img {
   letter-spacing: -0.03em;
   text-transform: uppercase;
   text-align: center;
+  margin-bottom: 50px;
 }
 
 .top {
 }
+
 .sellers-list {
+  display: flex;
+  /* flex-direction: row; */
+  gap: 16px;
 }
-.sellers-item-img {
+
+.sellers-item {
+  width: calc((100% - 16px * 2) / 3);
+  border: 15px 15px 0 0;
+}
+
+.sellers-cover-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.sellers-item-text {
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.02em;
+  color: #fafafa;
+  position: absolute;
+  top: 0;
+  /* background-color: gray; */
+  height: 100%;
+  border-radius: 15px 15px 0 0;
+  padding-left: 40px;
+  padding-right: 40px;
+  display: flex;
+  align-items: center;
+  transform: translateY(100%);
+  transition: transform 500ms ease;
+  backdrop-filter: blur(15px);
+  background: linear-gradient(
+    161deg,
+    rgba(253, 253, 255, 0.1) 0%,
+    rgba(8, 2, 21, 0.1) 100%
+  );
+}
+
+.sellers-item:hover .sellers-item-text {
+  transform: translateY(0);
 }
 
 .sellers-item-title {
@@ -400,6 +463,13 @@ img {
   letter-spacing: -0.02em;
   text-transform: uppercase;
   color: #111;
+  padding-top: 28px;
+  padding-bottom: 28px;
+  text-align: center;
+  border: 1px solid rgba(17, 17, 17, 0.1);
+  border-top: 0;
+  border-radius: 0 0 15px 15px;
+  justify-content: center;
 }
 
 /* ==============top sellers===========
