--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,9 +42,10 @@ img {
 }
 
 .container {
-  max-width: 1166px;
-  padding-left: 15px;
-  padding-right: 15px;
+  /* max-width: 1166px; */
+  width: 375px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin: 0 auto;
 }
 /* ====================*===============
@@ -196,8 +197,8 @@ img {
 =============about========== */
 .about {
   background: #1e1823;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .visually-hidden {
@@ -215,13 +216,13 @@ img {
 
 .about-list {
   display: flex;
-  gap: 88px;
-  padding-left: 18px;
-  padding-right: 18px;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .about-item {
-  width: calc((100% - 2 * 88px) / 3);
+  width: 100%;
+  padding-right: 28px;
 }
 
 .about-item-title {
@@ -242,14 +243,14 @@ img {
 ================taste========== */
 
 .taste {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 80px;
+  padding-bottom: 40px;
 }
 
 .taste-title {
   font-weight: 600;
-  font-size: 24px;
-  line-height: 1.17;
+  font-size: 20px;
+  line-height: 1.2;
   letter-spacing: -0.03em;
   text-transform: uppercase;
   text-align: center;
@@ -271,26 +272,28 @@ img {
   color: #111;
   max-width: 486px;
   margin: 0 auto;
-  margin-bottom: 50px;
+  margin-bottom: 32px;
 }
 
 .taste-list {
   display: flex;
   flex-wrap: wrap;
   column-gap: 32px;
-  row-gap: 24px;
-  /* gap: 24px 32px; */
+  /* row-gap: 24px; */
+  gap: 20px;
 }
 
 .taste-item {
   background-color: #fd9222;
   border-radius: 15px;
-  width: calc((100% - 3 * 32px) / 4);
+
+  width: 100%;
   padding: 28px 23px;
 }
 
 .taste-item-img {
   margin-bottom: 36px;
+  margin: 0 auto;
 }
 
 .taste-item-title {
@@ -875,4 +878,78 @@ footer {
 
 .theme-checkbox-input:checked + .checkbox-theme::after {
   transform: translate(18px);
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+
+  .about {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  .about-list {
+    gap: 44px 88px;
+  }
+
+  .about-item {
+    width: calc((100% - 88px) / 2);
+    padding-right: 0;
+  }
+
+  .taste {
+    padding-top: 100px;
+    padding-bottom: 50px;
+  }
+
+  .taste-title {
+    font-size: 24px;
+    line-height: 1.17;
+  }
+
+  .taste-text {
+    margin-bottom: 50px;
+  }
+
+  .taste-list {
+    grid-area: 32px;
+  }
+
+  .taste-item {
+    width: calc((100% - 32px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1136px;
+    padding: 0;
+  }
+
+  .about-list {
+    gap: 0 88px;
+    padding-left: 18px;
+    padding-right: 18px;
+  }
+
+  .about-item {
+    width: calc((100% - 2 * 88px) / 3);
+  }
+
+  .taste {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .taste-list {
+    gap: 24px 32px;
+  }
+
+  .taste-item {
+    width: calc((100% - 3 * 32px) / 4);
+  }
 }
