--- a/styles/styles.css
+++ b/styles/styles.css
@@ -766,29 +766,41 @@ img {
 
 footer {
   background: #1e1823;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  /* padding-top: 50px; */
+  /* padding-bottom: 50px; */
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .footer-top {
   display: flex;
-  padding-bottom: 50px;
+  flex-direction: column;
+  gap: 32px;
+  /* padding-bottom: 50px; */
+  padding-bottom: 32px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-  margin-bottom: 24px;
+  /* margin-bottom: 24px; */
 }
 
 .footer-title {
   font-weight: 500;
-  font-size: 28px;
-  line-height: 1.22;
+  /* font-size: 28px; */
+  font-size: 24px;
+  line-height: 1.17;
+  /* line-height: 1.22; */
   letter-spacing: -0.02em;
   color: #fff;
   max-width: 300px;
   margin-right: auto;
+  /* margin-bottom: 32px; */
 }
 
 .footer-item-link {
   color: #fff;
+}
+
+.footer-item:not(:last-child) {
+  margin-bottom: 18px;
 }
 
 .contacts-footer-link {
@@ -809,17 +821,30 @@ footer {
   margin-bottom: 14px;
 }
 
-.footer-soc-icon {
-  color: #fff; /*тимчасово*/
-}
+/* .footer-soc-icon {
+  color: #fff; тимчасово
+  color: #fd9222;
+} */
 
 .footer-soc {
+  order: 2;
   margin-right: 50px;
+}
+
+.footer-nav {
+  display: flex;
+  gap: 12px;
+}
+
+.footer-contacts {
+  order: 1;
 }
 
 .footer-contact-icon {
   fill: transparent;
   stroke: #fff;
+  width: 20px;
+  height: 20px;
 }
 
 .contacts-footer {
@@ -828,9 +853,17 @@ footer {
 }
 
 .footer-bottom {
+  padding-top: 32px;
+  /* padding-bottom: 32px; */
   display: flex;
+  gap: 32px;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
+}
+
+.footer-bottom-list {
+  display: block;
 }
 
 .footer-form {
@@ -841,10 +874,14 @@ footer {
 .footer-input {
   border: 1.5px solid rgba(255, 255, 255, 0.15);
   border-radius: 30px;
-  padding: 13px 24px;
-  width: 313px;
-  height: 52px;
+  /* padding: 13px 24px; */
+  padding: 14px 18px;
+  /* width: 313px; */
+  width: 207px;
+  /* height: 52px; */
+  height: 45px;
   background-color: transparent;
+  font-size: 14px;
 }
 
 .footer-input::placeholder {
@@ -858,7 +895,8 @@ footer {
   font-size: 14px;
   color: #fff;
   border-radius: 100px;
-  padding: 17px 40px;
+  /* padding: 17px 40px; */
+  padding: 14px 24px;
   border: none;
   /* width: 137px;
   height: 52px; */
