--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,6 +50,11 @@ img {
   padding-right: 20px;
   margin: 0 auto;
 }
+
+.no-scroll {
+  overflow: hidden;
+}
+
 /* ====================*===============
 =====================header============ */
 .header {
@@ -766,8 +771,6 @@ img {
 
 footer {
   background: #1e1823;
-  /* padding-top: 50px; */
-  /* padding-bottom: 50px; */
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -776,7 +779,6 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 32px;
-  /* padding-bottom: 50px; */
   padding-bottom: 32px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   /* margin-bottom: 24px; */
@@ -784,10 +786,8 @@ footer {
 
 .footer-title {
   font-weight: 500;
-  /* font-size: 28px; */
   font-size: 24px;
   line-height: 1.17;
-  /* line-height: 1.22; */
   letter-spacing: -0.02em;
   color: #fff;
   max-width: 300px;
@@ -859,7 +859,6 @@ footer {
   gap: 32px;
   flex-direction: column;
   justify-content: space-between;
-  /* align-items: center; */
 }
 
 .footer-bottom-list {
@@ -926,7 +925,7 @@ footer {
 }
 
 .modal {
-  width: 517px;
+  width: 340px;
   min-height: 794px;
   background-color: #fafafa;
   border-radius: 15px;
@@ -934,7 +933,7 @@ footer {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 40px;
+  padding: 32px 24px;
 }
 
 .is-open {
@@ -945,14 +944,22 @@ footer {
 
 .modal-close {
   position: absolute;
-  right: 24px;
-  top: 24px;
+  right: 14px;
+  top: 14px;
+  border: none;
+  padding: 0;
+  background-color: transparent;
+}
+
+.modal-close-icon {
+  stroke: currentColor;
+  fill: none;
 }
 
 .modal-title {
   font-weight: 600;
-  font-size: 24px;
-  line-height: 1.17;
+  font-size: 20px;
+  line-height: 1.2;
   letter-spacing: -0.03em;
   text-transform: uppercase;
   color: #111;
@@ -965,7 +972,7 @@ footer {
 }
 
 .modal-field {
-  margin-bottom: 18px;
+  margin-bottom: 14px;
 }
 
 .modal-input-wrap {
@@ -974,10 +981,11 @@ footer {
 
 .modal-input {
   width: 100%;
-  height: 68px;
   border: 1.5px solid rgba(17, 17, 17, 0.05);
   border-radius: 13px;
-  padding: 22px 24px 22px 62px;
+  padding-left: 44px;
+  padding-top: 14px;
+  padding-bottom: 14px;
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
   background-color: transparent;
   outline: transparent;
@@ -1006,9 +1014,11 @@ footer {
 
 .modal-icon {
   fill: transparent;
-  stroke: #404040;
+  stroke: #fd9222;
   position: absolute;
-  left: 24px;
+  left: 18px;
+  width: 18px;
+  height: 18px;
   top: 50%;
   transform: translateY(-50%);
   transition: stroke 300ms linear;
@@ -1019,11 +1029,11 @@ footer {
 }
 
 .modal-label {
-  font-size: 14px;
+  font-size: 13px;
   letter-spacing: -0.02em;
   color: rgba(64, 64, 64, 0.3);
   display: block;
-  margin-bottom: 8px;
+  margin-bottom: 4px;
 }
 
 .modal-text {
@@ -1035,6 +1045,7 @@ footer {
 .modal-submit {
   border-radius: 100px;
   padding: 14px 40px;
+  /* padding: 12px 28px; */
   width: 117px;
   height: 45px;
   background: #fd9222;
@@ -1048,12 +1059,13 @@ footer {
   text-decoration: underline;
   text-decoration-skip-ink: none;
   color: #fd9222;
+  margin-left: 32px;
 }
 
 .check-text {
   display: flex;
-  align-items: center;
-  margin-bottom: 42px;
+  margin-bottom: 32px;
+  flex-wrap: wrap;
 }
 
 .check-text span {
@@ -1294,6 +1306,100 @@ footer {
     padding: 14px 40px;
     margin: 50px auto;
   }
+
+  footer {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  .footer-top {
+    flex-direction: row;
+    padding-bottom: 50px;
+  }
+
+  .footer-title {
+    font-size: 28px;
+    line-height: 1.22;
+  }
+
+  .footer-soc {
+    order: 1;
+  }
+
+  .footer-contacts {
+    order: 2;
+  }
+
+  .footer-bottom {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .footer-bottom-list {
+    align-items: center;
+    gap: 16px;
+  }
+
+  .footer-item:not(:last-child) {
+    margin-bottom: 0;
+  }
+
+  .footer-bottom-list li:nth-child(3),
+  .footer-bottom-list li:nth-child(4) {
+    display: none;
+  }
+
+  .footer-input {
+    padding: 14px 24px;
+    width: 232px;
+  }
+
+  .footer-form-btn {
+    padding: 14px 28px;
+  }
+
+  .modal {
+    width: 517px;
+    padding: 40px;
+  }
+
+  .modal-close {
+    right: 24px;
+    top: 24px;
+  }
+
+  .modal-title {
+    font-size: 24px;
+    line-height: 1.17;
+  }
+
+  .modal-field {
+    margin-bottom: 18px;
+  }
+
+  .modal-input {
+    height: 68px;
+    padding: 22px 24px 22px 62px;
+  }
+
+  .modal-icon {
+    left: 24px;
+  }
+
+  .modal-label {
+    font-size: 14px;
+    margin-bottom: 8px;
+  }
+
+  .modal-link {
+    margin-left: 0;
+  }
+
+  .check-text {
+    align-items: center;
+    margin-bottom: 42px;
+    flex-wrap: nowrap;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1426,5 +1532,27 @@ footer {
 
   .loved-btn {
     margin-bottom: 0;
+  }
+
+  .footer-contact-icon {
+    width: 24px;
+    height: 24px;
+  }
+
+  .footer-bottom {
+    padding-top: 24px;
+  }
+
+  .footer-bottom-list {
+    gap: 24px;
+  }
+
+  .footer-input {
+    width: 313px;
+    height: 52px;
+  }
+
+  .footer-form-btn {
+    padding: 18px 32px;
   }
 }
